# power-quality-mentoria-sample

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: data_dictionary.md
notebooks/: 01_eda_muestra.ipynb
src/power_quality/: __init__.py  io.py  quality_checks.py
