[project]
name = "power-quality-mentoria-sample"
version = "0.1.0"
description = "Muestra anonimizada de calidad de energia para propuesta de mentoria DiploDatos 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.1",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "jupyterlab>=4.3",
  "ipywidgets>=8.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/power_quality"]
